ns-isolation/nginx-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: nginx
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: "api"
      namespaceSelector:
        matchLabels:
          env: prod
